<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.codecleanms.calculator.CalcActivity"
    tools:showIn="@layout/activity_calc">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_resultado"
        android:hint="@string/txt_resultado"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/one"
        android:id="@+id/btn_one"
        android:layout_marginTop="150dp"
        android:layout_below="@+id/txt_resultado"
        android:layout_alignParentStart="true"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/two"
        android:id="@+id/btn_two"
        android:layout_alignTop="@+id/btn_one"
        android:layout_toEndOf="@+id/btn_one"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/three"
        android:id="@+id/btn_three"
        android:layout_alignBottom="@+id/btn_two"
        android:layout_toEndOf="@+id/btn_two"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/plus"
        android:id="@+id/btn_plus"
        android:layout_alignBottom="@+id/btn_three"
        android:layout_toEndOf="@+id/btn_three"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/four"
        android:id="@+id/btn_four"
        android:layout_below="@+id/btn_one"
        android:layout_alignParentStart="true"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/five"
        android:id="@+id/btn_five"
        android:layout_alignBottom="@+id/btn_four"
        android:layout_toEndOf="@+id/btn_four"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/six"
        android:id="@+id/btn_six"
        android:layout_alignBottom="@+id/btn_five"
        android:layout_toEndOf="@+id/btn_five"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/minus"
        android:id="@+id/btn_minus"
        android:layout_alignBottom="@+id/btn_six"
        android:layout_toEndOf="@+id/btn_six"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/seven"
        android:id="@+id/btn_seven"
        android:layout_below="@+id/btn_four"
        android:layout_alignParentStart="true"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/eigth"
        android:id="@+id/btn_eigth"
        android:layout_alignBottom="@+id/btn_seven"
        android:layout_toEndOf="@+id/btn_seven"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/nine"
        android:id="@+id/btn_nine"
        android:layout_alignBottom="@+id/btn_eigth"
        android:layout_toEndOf="@+id/btn_eigth"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/times"
        android:id="@+id/btn_times"
        android:layout_alignBottom="@+id/btn_nine"
        android:layout_toEndOf="@+id/btn_nine"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/comma"
        android:id="@+id/btn_comma"
        android:layout_below="@+id/btn_seven"
        android:layout_alignParentStart="true"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/zero"
        android:id="@+id/btn_zero"
        android:layout_alignBottom="@+id/btn_comma"
        android:layout_toEndOf="@+id/btn_comma"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/point"
        android:id="@+id/btn_point"
        android:layout_alignBottom="@+id/btn_zero"
        android:layout_toEndOf="@+id/btn_zero"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/divide"
        android:id="@+id/btn_divide"
        android:layout_alignBottom="@+id/btn_point"
        android:layout_toEndOf="@+id/btn_point"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:id="@+id/btn_equals"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/txt_resultado"
        android:layout_alignEnd="@+id/btn_plus"
        android:onClick="calcula"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btn_clear"
        android:layout_below="@+id/btn_equals"
        android:layout_alignEnd="@+id/btn_equals"
        android:onClick="clearScreen"/>


</RelativeLayout>
